--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <!-- https://www.colorhexa.com/fd6542 -->
     <color name="colorPrimary">#FD6542</color>
     <color name="colorPrimaryDark">#fc3608</color>
-    <color name="colorAccent">#42dafd</color>
+    <color name="colorAccent">#41cdbb</color>
 </resources>
