--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="list_horizontal_margin">8dp</dimen>
     <dimen name="movie_logo_row_standard_width">120dp</dimen>
     <dimen name="movie_logo_row_standard_height">160dp</dimen>
 </resources>
