--- a/app/src/main/res/layout/fact_section_detail_tvshow.xml
+++ b/app/src/main/res/layout/fact_section_detail_tvshow.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="right"
-        app:constraint_referenced_ids="tv_status_detail_label, tv_runtime_detail_label, tv_original_language_detail_label" />
+        app:constraint_referenced_ids="tv_status_detail_label,tv_original_language_detail_label" />
 
     <TextView
         android:id="@+id/tv_original_language_detail"
