--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/srl_detail_movie"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/activity_horizontal_margin">
 
-                <include layout="@layout/overview_detail_base_movie"/>
+                <include layout="@layout/overview_detail_base_movie" />
 
                 <include layout="@layout/fact_section_detail_movie" />
             </androidx.constraintlayout.widget.ConstraintLayout>
